test/infiniteType3.slq
// skipped
// args: --inference-limit=100
// TODO: make fast

def main(){
	x:=()⇒assert(0);
	while true{ /// error
		x=()⇒x;
	}
}
